# trade-binance-websocket-orderbook-dca-grid

./: .env.example  .gitignore  OBMICRO_GRID_COMMANDS.md  README.md  botctl.py  dca  ecosystem.scalp.config.js  fib  futures_scan.py  ob_bars.py  ob_candles.py  ob_ema.py  ob_live_chart.py  ob_oscillators.py  ob_pattern.py  ob_scalp_activity.py  ob_scalp_adaptive.py  ob_scalp_analyze.py  ob_scalp_autotune.py  ob_scalp_backfill.py  ob_scalp_dataset.py  ob_scalp_exits.py  ob_scalp_follow.py  ob_scalp_learn.py  ob_scalp_ml.py  ob_scalp_monitor.py  ob_scalp_pick.py  ob_scalp_pnl.py  ob_scalp_recovery.py  ob_scalp_session.py  ob_scalp_stack.py  ob_scalp_trades.py  ob_scalp_watch.py  ob_signals.py  ob_structure.py  ob_trig_learn.py  ob_triggers.py  obmicro-grid  obscalp  obscalp-autotune  (+18 more)
deploy/: com.oblive.plist.example  dca-futures-tp@.service  dca-futures@.service  dca-spot@.service  dca-staged-exit@.service  dca-super@.service  dca-telegram-ctl.service  dca-tp@.service  install_ob_live_macos.sh  ob-live@.service  ob_live_start.sh  sync_pairs.py  uninstall_ob_live_macos.sh
deploy/launchagents/: com.oblive.bnbusdt.plist  com.oblive.btcusdt.plist  com.oblive.ethusdt.plist  com.oblive.solusdt.plist
exits/: __init__.py  none.py  staged.py  trailing.py
